Ajout des cards de test et mise en prod
